# gravity-info-api

./: .gitignore  README.md
.github/workflows/: automated-deploy.yml  ci.yml
gravity-info-dash/: .firebaserc  README.md  firebase.json  package-lock.json  package.json
gravity-info-dash/public/: index.html  manifest.json
gravity-info-dash/src/: App.css  App.tsx  index.tsx  types.tsx  utils.ts
gravity-info-dash/src/components/: BatchQueue.tsx  CurrentParameters.tsx  EvmChains.tsx  GravityVolume.tsx  IncommingTransactions.tsx  SupplyInfo.tsx  TransactionQueue.tsx
gravity-info-server/: Cargo.toml  config.sample.yaml
gravity-info-server/src/: batch_relaying.rs  gravity_info.rs  main.rs  query_loop.rs  tls.rs  total_suppy.rs  transactions.rs  volume.rs
gravity-info-server/src/transactions/: database.rs  endpoints.rs  mod.rs
scripts/: build-and-deploy.sh  deploy-info-server.yml  hosts
scripts/roles/install-deps/defaults/: main.yml
scripts/roles/install-deps/tasks/: main.yml
scripts/roles/setup-info-server/tasks/: main.yml  systemd.yml
scripts/roles/setup-info-server/templates/: gravity-info-server.service.j2
scripts/roles/setup-nginx/defaults/: main.yml
scripts/roles/setup-nginx/tasks/: main.yml
scripts/roles/setup-nginx/templates/: info-dash.conf.j2
