[package]
name = "gravity-info-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_gravity = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="d43073fb5b17919bf2f86d2fa348e6ca1cee8cb1"}
cosmos_gravity = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="d43073fb5b17919bf2f86d2fa348e6ca1cee8cb1"}
gravity_utils = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="d43073fb5b17919bf2f86d2fa348e6ca1cee8cb1"}
relayer = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="d43073fb5b17919bf2f86d2fa348e6ca1cee8cb1"}
jsonrpc_server = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="d43073fb5b17919bf2f86d2fa348e6ca1cee8cb1"}
gravity_proto = "0.4.3"
deep_space = "2.23"
web30 = "1.2"
clarity = "1.2"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
actix-web = {version = "4.2", features = ["rustls"]}
actix-cors = "0.6"
rustls = "0.20"
rustls-pemfile = "0.3"
lazy_static = "1.4"
tonic = "0.10"
futures = "0.3"
num256 = "0.5"
openssl-probe = "0.1"
tokio = {version="1", features=["rt-multi-thread"]}
cosmos-sdk-proto-althea = "0.16"
sha256 = "1"
prost-types ="0.12"
rocksdb = "0.21"
actix-rt = "2.5.0"
serde_json = "1.0"
json = "0.12.4"
hex = "0.4"
chrono = "0.4.24"
rust_decimal= "1.29.1"

[features]
development = []