[package]
name = "gravity-info-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_gravity = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="949f3de6eab22ac87d40091d2a24be67b0ac3ead"}
cosmos_gravity = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="949f3de6eab22ac87d40091d2a24be67b0ac3ead"}
gravity_utils = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="949f3de6eab22ac87d40091d2a24be67b0ac3ead"}
relayer = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="949f3de6eab22ac87d40091d2a24be67b0ac3ead"}
jsonrpc_server = {git = "https://github.com/gravity-bridge/gravity-bridge", rev="949f3de6eab22ac87d40091d2a24be67b0ac3ead"}
gravity_proto = "0.5.0"
deep_space = "=2.25"
web30 = "1.4"
clarity = "1.4"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
actix-web = {version = "4.9", features = ["rustls"]}
actix-cors = "0.7"
rustls = "0.20"
rustls-pemfile = "0.3"
lazy_static = "1.5"
tonic = "0.10"
futures = "0.3"
num256 = "0.5"
openssl-probe = "0.1"
tokio = {version="1", features=["rt-multi-thread"]}
cosmos-sdk-proto-althea = "0.17"
sha256 = "1"
prost-types ="0.12"
rocksdb = "0.22"
actix-rt = "2.10.0"
serde_json = "1.0"
json = "0.12"
hex = "0.4"
chrono = "0.4"
rust_decimal= "1.36"
# we don't call or us OpenSSL directly in this codebase, but by adding
# this dependency with this feature we can enforce that openssl is compiled
# in 'vendored' mode all the way down the tree. What this means is that we use
# an openssl implementation from the crate and not from the system, simplifying
# our build process for a lot of cross-compile situations
openssl = { version = "0.10", features = ["vendored"] }

[features]
development = []
